--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "babel-plugin-polished",
   "version": "0.0.0",
   "description": "Compile away polished helpers",
   "repository": "thejameskyle/babel-plugin-polished",
