--- a/package.json
+++ b/package.json
@@ -6,26 +6,20 @@
   "license": "MIT",
   "author": "James Kyle <me@thejameskyle.com>",
   "main": "lib/index.js",
-  "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "mocha": "^2.2.5"
-  },
-  "scripts": {
-    "clean": "rm -rf lib",
-    "build": "babel src -d lib",
-    "test": "mocha --compilers js:babel-register",
-    "test:watch": "npm run test -- --watch",
-    "prepublish": "npm run clean && npm run build"
-  },
   "keywords": [
     "polished",
     "styled",
     "components",
     "babel-plugin"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "polished": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-plugin-tester": "^3.0.0",
+    "flow-bin": "^0.47.0"
   }
 }
